# mfrc522-rpi

./: .clang_format  .gitignore  CMakeLists.txt  LICENSE.md  README.md
examples/firmware_check/: firmware_check.cpp
src/: Arduino.h  MFRC522.cpp  MFRC522.h  MFRC522Extended.cpp  MFRC522Extended.h  SPI.cpp  SPI.h  Serial.h
src/piduino/: Arduino.h  Serial.cpp  WString.h
test/: test.cpp  test_mfrc522
